Fixing images scrolling component not showing properly on load

--- a/src/components/ArtworkRecommendation/ArtworkRecommendation.css
+++ b/src/components/ArtworkRecommendation/ArtworkRecommendation.css
@@ -20,8 +20,8 @@
     overflow-x: auto;
     flex: 1;
     display: flex;
-    /* Hide vertical scrollbar */
-    scrollbar-width: none;
+    /* Set scrollbar to auto for Firefox */
+    scrollbar-width: auto;
     -ms-overflow-style: none;
     padding-bottom: 20px;
 }
